Add some more config properties to jte-models.