@@ -11,7 +11,7 @@ public class SquashBlanksOutput implements TemplateOutput {
 
     @Override
     public void writeContent(String value) {
-        if (value.contains("\n") && value.trim().isEmpty()) {
+        if (value.contains("\n") && value.isBlank()) {
             return;
         }
         delegate.writeContent(value);
